pa 1.1.2 merge
git-svn-id: https://ncisvn.nci.nih.gov/svn/coppa/trunk/code@5212 553898ca-32d5-487a-af8b-6cf4ca579ab4